name: MyProject
version: 1.0
cabal-version: 1.6
build-type: Simple
license: PublicDomain
stability: experimental
synopsis: Some simple Haskell definitions to get started
category: Sample
author: LATBauerdick
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable MyProject
  main-is: FirstSteps.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      My
      Cards
      FibTuple
